faclib/f2c.h

extern double f_erf(double);
#define ERF(a0) f_erf((a0))
extern double f_fm5p(double);
#define FM5P(a0) f_fm5p((a0))
extern double f_fm5pi(double);
#define FM5PI(a0) f_fm5pi((a0))
extern double f_fm3p(double);
#define FM3P(a0) f_fm3p((a0))
extern double f_fm3pi(double);
#define FM3PI(a0) f_fm3pi((a0))
extern double f_fm1p(double);
#define FM1P(a0) f_fm1p((a0))
extern double f_fm1pi(double);
#define FM1PI(a0) f_fm1pi((a0))
extern double f_fm1m(double);
#define FM1M(a0) f_fm1m((a0))
extern double f_fm1mi(double);
#define FM1MI(a0) f_fm1mi((a0))
extern double f_expint(double,int);
#define EXPINT(a0,a1) f_expint((a0),(a1))
extern double f_eione(int,double);
#define EIONE(a0,a1) f_eione((a0),(a1))
extern double f_d1mach(int);
#define D1MACH(a0) f_d1mach((a0))
extern void f_radfnd(int,double *);
#define RADFND(a0,a1) f_radfnd((a0),(a1))
extern void f_locsep(int,int,double *,double *);
#define LOCSEP(a0,a1,a2,a3) f_locsep((a0),(a1),(a2),(a3))
extern void f_rgmqed(double *,double *);
#define RGMQED(a0,a1) f_rgmqed((a0),(a1))
extern void f_fsedat(int,int,int,int,double *,double *);
#define FSEDAT(a0,a1,a2,a3,a4,a5) f_fsedat((a0),(a1),(a2),(a3),(a4),(a5))
extern void f_genqed(int,int,int,int,int,double *,double *,double *,double *,double *,double *);
#define GENQED(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10) f_genqed((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10))
extern void f_iniqed(double,int,int,double);
#define INIQED(a0,a1,a2,a3) f_iniqed((a0),(a1),(a2),(a3))
extern void f_mohrfin(int,int,double,double,double *,double *,double *,double *,double *);
#define MOHRFIN(a0,a1,a2,a3,a4,a5,a6,a7,a8) f_mohrfin((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8))
extern void f_uvip3p(int,int,double *,double *,int,double *,double *);
#define UVIP3P(a0,a1,a2,a3,a4,a5,a6) f_uvip3p((a0),(a1),(a2),(a3),(a4),(a5),(a6))
extern void f_uvip3i(int,int,double *,double *,int,double *,double *,double *);
#define UVIP3I(a0,a1,a2,a3,a4,a5,a6,a7) f_uvip3i((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7))
extern void f_uvip3c(int,int,double *,double *,double *,double *,double *);
#define UVIP3C(a0,a1,a2,a3,a4,a5,a6) f_uvip3c((a0),(a1),(a2),(a3),(a4),(a5),(a6))
extern void f_sdbi3p(int,int,double *,double *,double *,int,double *,double *,double *,int *,double *,int *);
#define SDBI3P(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11) f_sdbi3p((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11))
extern void f_rgbi3p(int,int,int,double *,double *,double *,int,double *,double *,double *,int *,double *);
#define RGBI3P(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11) f_rgbi3p((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11))
extern void f_lmqn(int *,int,double *,double *,double *,double *,int,void (*)(int *,double *,double *,double *),int,int,int,double,double,double,double);
#define LMQN(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11,a12,a13,a14) f_lmqn((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11),(a12),(a13),(a14))
extern void f_lmqnbc(int *,int,double *,double *,double *,double *,int,void (*)(int *,double *,double *,double *),double *,double *,int *,int,int,int,double,double,double,double);
#define LMQNBC(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11,a12,a13,a14,a15,a16,a17) f_lmqnbc((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11),(a12),(a13),(a14),(a15),(a16),(a17))
extern void f_subplx(double (*)(int *, double *),int,double,int,int,double *,double *,double *,int *,double *,int *,int *);
#define SUBPLX(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11) f_subplx((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11))
extern double f_argam(double,double);
#define ARGAM(a0,a1) f_argam((a0),(a1))
extern double f_dlogam(double);
#define DLOGAM(a0) f_dlogam((a0))
extern void f_beslik(double,double,double *,double *);
#define BESLIK(a0,a1,a2,a3) f_beslik((a0),(a1),(a2),(a3))
extern double f_besljn(int,int,double);
#define BESLJN(a0,a1,a2) f_besljn((a0),(a1),(a2))
extern void f_y5n(double,double,double,double,double *,double *,double *,double *,int *);
#define Y5N(a0,a1,a2,a3,a4,a5,a6,a7,a8) f_y5n((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8))
extern void f_dcoul(double,double,int,double,double *,double *,double *,double *,int *);
#define DCOUL(a0,a1,a2,a3,a4,a5,a6,a7,a8) f_dcoul((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8))
extern void f_dcoul1(double,double,int,double,double *,double *,double *,double *,int *);
#define DCOUL1(a0,a1,a2,a3,a4,a5,a6,a7,a8) f_dcoul1((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8))
extern void f_cmultip(double,double,double,double,double,int,int,int,double *,int,int *);
#define CMULTIP(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10) f_cmultip((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10))
extern void f_acofz1(double,double,int,int,double *,double *,int,int);
#define ACOFZ1(a0,a1,a2,a3,a4,a5,a6,a7) f_acofz1((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7))
extern void f_pixz1(double,double,int,int,double *,double *,double *,double *,int,int,int,int);
#define PIXZ1(a0,a1,a2,a3,a4,a5,a6,a7,a8,a9,a10,a11) f_pixz1((a0),(a1),(a2),(a3),(a4),(a5),(a6),(a7),(a8),(a9),(a10),(a11))