faclib/f2c.f90

module f2c
use iso_c_binding

contains

function f_erf(a0) bind(C, name='f_erf')
real(c_double), value :: a0
real(c_double) :: f_erf, ERF
f_erf = ERF(a0)
end function

function f_fm5p(a0) bind(C, name='f_fm5p')
real(c_double), value :: a0
real(c_double) :: f_fm5p, FM5P
f_fm5p = FM5P(a0)
end function

function f_fm5pi(a0) bind(C, name='f_fm5pi')
real(c_double), value :: a0
real(c_double) :: f_fm5pi, FM5PI
f_fm5pi = FM5PI(a0)
end function

function f_fm3p(a0) bind(C, name='f_fm3p')
real(c_double), value :: a0
real(c_double) :: f_fm3p, FM3P
f_fm3p = FM3P(a0)
end function

function f_fm3pi(a0) bind(C, name='f_fm3pi')
real(c_double), value :: a0
real(c_double) :: f_fm3pi, FM3PI
f_fm3pi = FM3PI(a0)
end function

function f_fm1p(a0) bind(C, name='f_fm1p')
real(c_double), value :: a0
real(c_double) :: f_fm1p, FM1P
f_fm1p = FM1P(a0)
end function

function f_fm1pi(a0) bind(C, name='f_fm1pi')
real(c_double), value :: a0
real(c_double) :: f_fm1pi, FM1PI
f_fm1pi = FM1PI(a0)
end function

function f_fm1m(a0) bind(C, name='f_fm1m')
real(c_double), value :: a0
real(c_double) :: f_fm1m, FM1M
f_fm1m = FM1M(a0)
end function

function f_fm1mi(a0) bind(C, name='f_fm1mi')
real(c_double), value :: a0
real(c_double) :: f_fm1mi, FM1MI
f_fm1mi = FM1MI(a0)
end function

function f_expint(a0,a1) bind(C, name='f_expint')
real(c_double), value :: a0
integer(c_int), value :: a1
real(c_double) :: f_expint, EXPINT
f_expint = EXPINT(a0,a1)
end function

function f_eione(a0,a1) bind(C, name='f_eione')
integer(c_int), value :: a0
real(c_double), value :: a1
real(c_double) :: f_eione, EIONE
f_eione = EIONE(a0,a1)
end function

function f_d1mach(a0) bind(C, name='f_d1mach')
integer(c_int), value :: a0
real(c_double) :: f_d1mach, D1MACH
f_d1mach = D1MACH(a0)
end function

subroutine f_radfnd(a0,a1) bind(C, name='f_radfnd')
integer(c_int), value :: a0
real(c_double) :: a1(*)
call RADFND(a0,a1)
end subroutine

subroutine f_locsep(a0,a1,a2,a3) bind(C, name='f_locsep')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double) :: a2(*)
real(c_double) :: a3(*)
call LOCSEP(a0,a1,a2,a3)
end subroutine

subroutine f_rgmqed(a0,a1) bind(C, name='f_rgmqed')
real(c_double) :: a0(*)
real(c_double) :: a1(*)
call RGMQED(a0,a1)
end subroutine

subroutine f_fsedat(a0,a1,a2,a3,a4,&
                    a5) bind(C, name='f_fsedat')
integer(c_int), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
integer(c_int), value :: a3
real(c_double) :: a4(*)
real(c_double) :: a5(*)
call FSEDAT(a0,a1,a2,a3,a4,&
            a5)
end subroutine

subroutine f_genqed(a0,a1,a2,a3,a4,&
                    a5,a6,a7,a8,a9,&
                    a10) bind(C, name='f_genqed')
integer(c_int), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
integer(c_int), value :: a3
integer(c_int), value :: a4
real(c_double) :: a5(*)
real(c_double) :: a6(*)
real(c_double) :: a7(*)
real(c_double) :: a8(*)
real(c_double) :: a9(*)
real(c_double) :: a10(*)
call GENQED(a0,a1,a2,a3,a4,&
            a5,a6,a7,a8,a9,&
            a10)
end subroutine

subroutine f_iniqed(a0,a1,a2,a3) bind(C, name='f_iniqed')
real(c_double), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
real(c_double), value :: a3
call INIQED(a0,a1,a2,a3)
end subroutine

subroutine f_mohrfin(a0,a1,a2,a3,a4,&
                     a5,a6,a7,a8) bind(C, name='f_mohrfin')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double), value :: a3
real(c_double) :: a4(*)
real(c_double) :: a5(*)
real(c_double) :: a6(*)
real(c_double) :: a7(*)
real(c_double) :: a8(*)
call MOHRFIN(a0,a1,a2,a3,a4,&
             a5,a6,a7,a8)
end subroutine

subroutine f_uvip3p(a0,a1,a2,a3,a4,&
                    a5,a6) bind(C, name='f_uvip3p')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double) :: a2(*)
real(c_double) :: a3(*)
integer(c_int), value :: a4
real(c_double) :: a5(*)
real(c_double) :: a6(*)
call UVIP3P(a0,a1,a2,a3,a4,&
            a5,a6)
end subroutine

subroutine f_uvip3i(a0,a1,a2,a3,a4,&
                    a5,a6,a7) bind(C, name='f_uvip3i')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double) :: a2(*)
real(c_double) :: a3(*)
integer(c_int), value :: a4
real(c_double) :: a5(*)
real(c_double) :: a6(*)
real(c_double) :: a7(*)
call UVIP3I(a0,a1,a2,a3,a4,&
            a5,a6,a7)
end subroutine

subroutine f_uvip3c(a0,a1,a2,a3,a4,&
                    a5,a6) bind(C, name='f_uvip3c')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double) :: a2(*)
real(c_double) :: a3(*)
real(c_double) :: a4(*)
real(c_double) :: a5(*)
real(c_double) :: a6(*)
call UVIP3C(a0,a1,a2,a3,a4,&
            a5,a6)
end subroutine

subroutine f_sdbi3p(a0,a1,a2,a3,a4,&
                    a5,a6,a7,a8,a9,&
                    a10,a11) bind(C, name='f_sdbi3p')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double) :: a2(*)
real(c_double) :: a3(*)
real(c_double) :: a4(*)
integer(c_int), value :: a5
real(c_double) :: a6(*)
real(c_double) :: a7(*)
real(c_double) :: a8(*)
integer(c_int) :: a9(*)
real(c_double) :: a10(*)
integer(c_int) :: a11(*)
call SDBI3P(a0,a1,a2,a3,a4,&
            a5,a6,a7,a8,a9,&
            a10,a11)
end subroutine

subroutine f_rgbi3p(a0,a1,a2,a3,a4,&
                    a5,a6,a7,a8,a9,&
                    a10,a11) bind(C, name='f_rgbi3p')
integer(c_int), value :: a0
integer(c_int), value :: a1
integer(c_int), value :: a2
real(c_double) :: a3(*)
real(c_double) :: a4(*)
real(c_double) :: a5(*)
integer(c_int), value :: a6
real(c_double) :: a7(*)
real(c_double) :: a8(*)
real(c_double) :: a9(*)
integer(c_int) :: a10(*)
real(c_double) :: a11(*)
call RGBI3P(a0,a1,a2,a3,a4,&
            a5,a6,a7,a8,a9,&
            a10,a11)
end subroutine

subroutine f_lmqn(a0,a1,a2,a3,a4,&
                  a5,a6,a7,a8,a9,&
                  a10,a11,a12,a13,a14) bind(C, name='f_lmqn')
integer(c_int) :: a0(*)
integer(c_int), value :: a1
real(c_double) :: a2(*)
real(c_double) :: a3(*)
real(c_double) :: a4(*)
real(c_double) :: a5(*)
integer(c_int), value :: a6
type(c_funptr), value :: a7
integer(c_int), value :: a8
integer(c_int), value :: a9
integer(c_int), value :: a10
real(c_double), value :: a11
real(c_double), value :: a12
real(c_double), value :: a13
real(c_double), value :: a14
interface
subroutine c7(n,x,f,g) bind(C)
import :: c_int, c_double
integer(c_int) :: n
real(c_double), dimension(n) :: x, g
real(c_double) :: f
end subroutine
end interface
procedure(c7), pointer :: p7
call c_f_procpointer(a7,p7)
call LMQN(a0,a1,a2,a3,a4,&
          a5,a6,p7,a8,a9,&
          a10,a11,a12,a13,a14)
end subroutine

subroutine f_lmqnbc(a0,a1,a2,a3,a4,&
                    a5,a6,a7,a8,a9,&
                    a10,a11,a12,a13,a14,&
                    a15,a16,a17) bind(C, name='f_lmqnbc')
integer(c_int) :: a0(*)
integer(c_int), value :: a1
real(c_double) :: a2(*)
real(c_double) :: a3(*)
real(c_double) :: a4(*)
real(c_double) :: a5(*)
integer(c_int), value :: a6
type(c_funptr), value :: a7
real(c_double) :: a8(*)
real(c_double) :: a9(*)
integer(c_int) :: a10(*)
integer(c_int), value :: a11
integer(c_int), value :: a12
integer(c_int), value :: a13
real(c_double), value :: a14
real(c_double), value :: a15
real(c_double), value :: a16
real(c_double), value :: a17
interface
subroutine c7(n,x,f,g) bind(C)
import :: c_int, c_double
integer(c_int) :: n
real(c_double), dimension(n) :: x, g
real(c_double) :: f
end subroutine
end interface
procedure(c7), pointer :: p7
call c_f_procpointer(a7,p7)
call LMQNBC(a0,a1,a2,a3,a4,&
            a5,a6,p7,a8,a9,&
            a10,a11,a12,a13,a14,&
            a15,a16,a17)
end subroutine

subroutine f_subplx(a0,a1,a2,a3,a4,&
                    a5,a6,a7,a8,a9,&
                    a10,a11) bind(C, name='f_subplx')
type(c_funptr), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
integer(c_int), value :: a3
integer(c_int), value :: a4
real(c_double) :: a5(*)
real(c_double) :: a6(*)
real(c_double) :: a7(*)
integer(c_int) :: a8(*)
real(c_double) :: a9(*)
integer(c_int) :: a10(*)
integer(c_int) :: a11(*)
interface
function c0(n,x) bind(C)
import :: c_int, c_double
integer(c_int) :: n
real(c_double) :: x
real(c_double) :: c0
end function
end interface
procedure(c0), pointer :: p0
call c_f_procpointer(a0,p0)
call SUBPLX(p0,a1,a2,a3,a4,&
            a5,a6,a7,a8,a9,&
            a10,a11)
end subroutine

function f_argam(a0,a1) bind(C, name='f_argam')
real(c_double), value :: a0
real(c_double), value :: a1
real(c_double) :: f_argam, ARGAM
f_argam = ARGAM(a0,a1)
end function

function f_dlogam(a0) bind(C, name='f_dlogam')
real(c_double), value :: a0
real(c_double) :: f_dlogam, DLOGAM
f_dlogam = DLOGAM(a0)
end function

subroutine f_beslik(a0,a1,a2,a3) bind(C, name='f_beslik')
real(c_double), value :: a0
real(c_double), value :: a1
real(c_double) :: a2(*)
real(c_double) :: a3(*)
call BESLIK(a0,a1,a2,a3)
end subroutine

function f_besljn(a0,a1,a2) bind(C, name='f_besljn')
integer(c_int), value :: a0
integer(c_int), value :: a1
real(c_double), value :: a2
real(c_double) :: f_besljn, BESLJN
f_besljn = BESLJN(a0,a1,a2)
end function

subroutine f_y5n(a0,a1,a2,a3,a4,&
                 a5,a6,a7,a8) bind(C, name='f_y5n')
real(c_double), value :: a0
real(c_double), value :: a1
real(c_double), value :: a2
real(c_double), value :: a3
real(c_double) :: a4(*)
real(c_double) :: a5(*)
real(c_double) :: a6(*)
real(c_double) :: a7(*)
integer(c_int) :: a8(*)
call Y5N(a0,a1,a2,a3,a4,&
         a5,a6,a7,a8)
end subroutine

subroutine f_dcoul(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8) bind(C, name='f_dcoul')
real(c_double), value :: a0
real(c_double), value :: a1
integer(c_int), value :: a2
real(c_double), value :: a3
real(c_double) :: a4(*)
real(c_double) :: a5(*)
real(c_double) :: a6(*)
real(c_double) :: a7(*)
integer(c_int) :: a8(*)
call DCOUL(a0,a1,a2,a3,a4,&
           a5,a6,a7,a8)
end subroutine

subroutine f_dcoul1(a0,a1,a2,a3,a4,&
                    a5,a6,a7,a8) bind(C, name='f_dcoul1')
real(c_double), value :: a0
real(c_double), value :: a1
integer(c_int), value :: a2
real(c_double), value :: a3
real(c_double) :: a4(*)
real(c_double) :: a5(*)
real(c_double) :: a6(*)
real(c_double) :: a7(*)
integer(c_int) :: a8(*)
call DCOUL1(a0,a1,a2,a3,a4,&
            a5,a6,a7,a8)
end subroutine

subroutine f_cmultip(a0,a1,a2,a3,a4,&
                     a5,a6,a7,a8,a9,&
                     a10) bind(C, name='f_cmultip')
real(c_double), value :: a0
real(c_double), value :: a1
real(c_double), value :: a2
real(c_double), value :: a3
real(c_double), value :: a4
integer(c_int), value :: a5
integer(c_int), value :: a6
integer(c_int), value :: a7
real(c_double) :: a8(*)
integer(c_int), value :: a9
integer(c_int) :: a10(*)
call CMULTIP(a0,a1,a2,a3,a4,&
             a5,a6,a7,a8,a9,&
             a10)
end subroutine

subroutine f_acofz1(a0,a1,a2,a3,a4,&
                    a5,a6,a7) bind(C, name='f_acofz1')
real(c_double), value :: a0
real(c_double), value :: a1
integer(c_int), value :: a2
integer(c_int), value :: a3
real(c_double) :: a4(*)
real(c_double) :: a5(*)
integer(c_int), value :: a6
integer(c_int), value :: a7
call ACOFZ1(a0,a1,a2,a3,a4,&
            a5,a6,a7)
end subroutine

subroutine f_pixz1(a0,a1,a2,a3,a4,&
                   a5,a6,a7,a8,a9,&
                   a10,a11) bind(C, name='f_pixz1')
real(c_double), value :: a0
real(c_double), value :: a1
integer(c_int), value :: a2
integer(c_int), value :: a3
real(c_double) :: a4(*)
real(c_double) :: a5(*)
real(c_double) :: a6(*)
real(c_double) :: a7(*)
integer(c_int), value :: a8
integer(c_int), value :: a9
integer(c_int), value :: a10
integer(c_int), value :: a11
call PIXZ1(a0,a1,a2,a3,a4,&
           a5,a6,a7,a8,a9,&
           a10,a11)
end subroutine
